Fixed MAGETWO-9938: Marked input text looks not aligned

--- a/app/design/frontend/magento2/piece-of-cake/css/styles.less
+++ b/app/design/frontend/magento2/piece-of-cake/css/styles.less
@@ -5630,6 +5630,22 @@ and (max-width : 768px)  {
     }
 }
 
+.form.search.advanced {
+    .fieldset {
+        .range.price {
+            .field {
+                width: 90px;
+            }
+            .with-addon {
+                width: 125px;
+            }
+            .addafter {
+                border-left: 0;
+            }
+        }
+    }
+}
+
 .form.newsletter.manage .field.choice,
 .form.address.edit .field.choice.set {
     padding-left: 30%;
